# aiosc

./: .gitignore  Cargo.toml  LICENSE  README.md  release-linux.sh  release-mac-lipo.sh  release-mac.sh  release.sh
src/: cli.rs  config.rs  executor.rs  llm.rs  main.rs  message.rs
