[package]
name = "aiosc"
version = "0.1.4"
authors = ["tarkh"]
description = "Artificial Intelligence Operating System Commander"
keywords = ["ai", "cli", "os"]
edition = "2021"

[dependencies]
rustyline = "15.0.0"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
json_comments = "0.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "3.0.0"
hostname = "0.4.0"
os_info = { version = "3", default-features = false }
dirs = "6.0.0"
ptyprocess = "0.4.1"
nix = "0.29.0"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
panic = "abort"